# File-Encryption-Decryption-Tool-System

./: .gitignore  LICENSE  QUICK_START.md  README.md
backend/cpp/: CMakeLists.txt  main.cpp
backend/cpp/include/: CaesarCipher.h  Cipher.h  DecryptionManager.h  EncryptionManager.h  FileHandler.h  KeyManager.h  User.h  XORCipher.h
backend/cpp/src/: CaesarCipher.cpp  Cipher.cpp  DecryptionManager.cpp  EncryptionManager.cpp  FileHandler.cpp  KeyManager.cpp  User.cpp  XORCipher.cpp
docs/: README.md  UML_CLASS_DIAGRAM.md  USE_CASE_DIAGRAM.md
frontend/: dashboard.html  decrypt.html  encrypt.html  index.html  keys.html  login.html  profile.html  register.html  reports.html
frontend/css/: style.css
frontend/js/: app.js
